z-index fix

--- a/assets/styles/pages/_projects.scss
+++ b/assets/styles/pages/_projects.scss
@@ -23,7 +23,7 @@
       gap: 1rem;
       max-width: 100%;
       position: relative;
-      z-index: -1;
+      z-index: 0;
       li {
         cursor: pointer;
         white-space: nowrap;
